--- a/BlazorReact/wwwroot/index.html
+++ b/BlazorReact/wwwroot/index.html
@@ -20,6 +20,10 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+     <script src="js/js-event-bus.min.js"></script>
+    <script type="text/javascript">
+        window.eventBus = new EventBus()
+    </script>
 </body>
 
 </html>
